--- a/_index.css
+++ b/_index.css
@@ -15,11 +15,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+ 
 }
 
 *{
   margin: 0;
   padding: 0;
+  height: auto;
+  overflow: hidden smooth;
 }
 a {
   color: inherit;
