--- a/components/Buttons/_button.css
+++ b/components/Buttons/_button.css
@@ -8,12 +8,6 @@
     transition: all .2s ease-in-out;
 }       
 
-.mainButton:hover{
-    cursor: pointer;
-    transform: scale(1.015);
-    opacity: .85;
-}
-
 
 .secButton{
     color: var(--textMainColor);
@@ -24,11 +18,6 @@
     background: var(--secColor);
 } 
 
-.secButton:hover{
-    cursor: pointer;
-    transform: scale(1.015);
-    opacity: .85;
-}
 
 
 .ghostButton{
@@ -40,11 +29,6 @@
     background: none;
 }
 
-.ghostButton:hover{
-    cursor: pointer;
-    transform: scale(1.015);
-    opacity: .85;
-}
 
 .linkButton{
     color: var(--textMainColor);
@@ -59,11 +43,6 @@
 
 }
 
-.linkButton:hover{
-    cursor: pointer;
-    transform: scale(1.015);
-    opacity: .85;
-}
 
 
 
@@ -71,7 +50,7 @@
 
 
 
-@media (min-width: 600px){
+@media (min-width: 601px){
 
     .mainButton{
         
@@ -110,4 +89,102 @@
     
  
 
+}
+
+
+/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+
+
+@media (min-width: 1181px){
+
+    .desktopMainButton{
+        color: var(--mainColor);
+        border: 2px solid var(--mainColor);
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: white;
+    }
+
+    .desktopMainButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .9;
+    } 
+    .desktopSecButton{
+        color: white;
+        border: 2px solid white;
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: none;
+    }
+
+    .desktopSecButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .9;
+    } 
+    .mainButton{
+        color: var(--textMainColor);
+        border: 2px solid white;
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: var(--mainColor);
+    }       
+    .mainButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .9;
+    }
+
+    .secButton{
+        color: var(--textMainColor);
+        border: 2px solid var(--mainColor);
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: var(--secColor);
+    } 
+
+    .secButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .9;
+    }
+
+    .ghostButton{
+        color: var(--textMainColor);
+        border: none;
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: none;
+    }
+
+    .ghostButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .90;
+    }
+    
+
+    .linkButton{
+        color: var(--textMainColor);
+        border: none;
+        padding: 12px 20px;
+        border-radius: 18px;
+        font-size: 20px;
+        background: none;
+        color: var(--mainColor);
+        text-decoration-line: underline;
+
+    }
+    .linkButton:hover{
+        cursor: pointer;
+        transform: scale(1.015);
+        opacity: .90;
+    }
+    
 }
