--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -68,7 +68,7 @@ h3{
 
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
-@media (min-width: 600px){
+@media (min-width: 601px){
 
      
     h3{
@@ -100,5 +100,79 @@ h3{
         margin-bottom: 16%;
     }
    
+
+}
+
+
+/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+
+
+@media (min-width: 1181px){
+
+    h3{
+        font-size: 25px;
+        text-align: center;
+    }
+    .contact-root{
+        margin-bottom: 20%;
+        margin-top: 10%;
+    }
+    
+    .contact-content{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .contact-content img{
+        height: 450px;
+        object-fit: contain;
+    }
+    
+    .contact-copy{
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .contact-copy h2{
+        font-size: 30px;
+        margin: 0;
+    }
+    .contact-copy p{
+        font-size: 20px;
+    }
+    .Contact-CTA{
+        display: flex;
+        margin-right: auto;
+        height: fit-content;
+        width: fit-content;
+        margin-top: 10%;
+    }
+    .Contact-CTA button{
+        margin: 0px;
+        display: flex;
+        margin: 0px 0px;
+        height: fit-content;
+        width: fit-content;
+    }
+    .contact-btn-options{
+        width: 50%;
+        height: auto;
+        margin-top: 10%;
+    }
+    
+    .contact-options-cards{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 
 }
