--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -55,7 +55,7 @@ b{
 
 
 
-@media (min-width: 600px){
+@media (min-width: 601px){
     
     .landingPage-root{
         margin-top: 10%;
@@ -81,4 +81,69 @@ b{
         margin-top: 12%;
         margin-bottom: 16%;
     }
+}
+
+
+
+/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+
+
+@media (min-width: 1181px){
+
+
+    .landingPage-root{
+        margin-top: 10%;
+        margin-bottom: 20%;
+       
+    }
+    .landingPage-root .landingPage-content{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .landingPage-content .astroBoy{
+        height: 450px;
+        object-fit: contain;
+
+    }
+    .landingPage-copy{
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .landingPage-copy h2{
+        font-size: 30px;
+        margin: 0;
+
+    }
+
+    .landingPage-copy p{
+        font-size: 20px;
+        font-weight: normal;
+        text-align: justify;
+
+    }
+
+    .landingPage-CTA{ 
+        display: flex;
+        margin-right: auto;
+        height: fit-content;
+        width: fit-content;
+        margin-top: 10%;
+    }
+    .landingPage-CTA button{
+        margin: 0px;
+        display: flex;
+        margin: 0px 0px;
+        height: fit-content;
+        width: fit-content;
+    }
+
 }
