--- a/routes/Home/_home.css
+++ b/routes/Home/_home.css
@@ -1,27 +1,31 @@
-.rootHome{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    overflow: hidden scroll;
-}
 *{
     margin: 0px;
     padding: 0px;
 }
+.rootHome{
+    height: min-content;
+    width: 100vw;
+    position: relative;
+    overflow: hidden scroll;
+    scroll-behavior: smooth;
+}
 ::-webkit-scrollbar {
     width: 0px;
     height: 0px;
-  }
-
-@media (min-width: 1181px){
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-    .rootHome{
-        height: auto;
-        width: 100vw;
-        position: relative;
-        overflow: hidden;
-    }
 }
+a {
+    color: inherit;
+    text-decoration: none;
+  }
+  h2{
+    font-size: inherit;
+    font-weight: inherit;
+  }
+  p{
+    font-size: inherit;
+    font-weight: inherit;
+  }
+  h3{
+    font-size: inherit;
+    font-weight: inherit;
+  }
