--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -1,41 +1,36 @@
 h2{
-    font-size: 24px;
-    margin: 0;
+    font-size: 20px;
+    font-weight: 700;
     text-align: left;
     width: 100%;
-    font-weight: 700;
 }
 h3{
-    font-size: inherit;
-    text-align: inherit;
-    font-weight: inherit;
-    margin: 0;
+    font-size: 20px;
+    text-align: left;
+    font-weight: 700;
     width: 100%;
 }
 p{
     text-align: justify;
     font-size: 16px;
-    margin: 0;
     width: 100%;
 }
+video{
+    width: 100%;
+    object-fit: contain;
+}
+
 img{
     width: 100%;
     object-fit: contain;
-    margin: 0;
+}
 
-}
-img:hover{
-    cursor: pointer;
-}
 ul{
     text-align: left;
     width: 90%;
     padding-left: 20px;
 }
 
-span{
-    padding: 0px 0px;
-}
 
 .card-root-open{
     width: 100%;
@@ -49,7 +44,6 @@ span{
     position: relative;
     overflow: hidden;
     margin: 5px 0px;
-    background-color: none;
 }
 
 .card-title{
@@ -61,9 +55,7 @@ span{
     background-color: var(--mainColor);
     padding: 0px 20px;
     box-sizing: border-box;
-    font-weight: 700;
-    font-size: 24px;
-    text-align: left;
+    
 }
 .card-root-open .card-title button{
     height: 30px;
@@ -77,28 +69,23 @@ span{
     background-color: var(--textMainColor);
     color: var(--mainColor);
     transform:rotate(90deg);
-    transition: all .3s ease-in-out;
+    transition: max-height .3s ease-in-out;
 }
 .card-root-open .card-body{
     display: flex;
     flex-direction: column;
-    max-height: 400px;
-    width: 90%;
+    max-height: 300px;
     justify-content: flex-start;
     align-items: center;
     background-color: var(--secColor);
     overflow: hidden;
-    padding: 20px 0px;
+    padding: 20px 20px;
     box-sizing: border-box;
     transition: all .3s ease-in-out;
-    gap: 15px;
+    gap: 20px;
     overflow: scroll;
-    scroll-behavior: smooth;
 }
-.card-root-open .card-body::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-  }
+
 
 /*  ------------------------- CLOSED  --------------------- */
 
@@ -130,18 +117,16 @@ span{
     color: var(--mainColor);
     transform:rotate(0deg);
     transition: all .3s ease-in-out;
-
 }
 .card-root-close .card-body{
     display: flex;
     flex-direction: column;
     max-height: 0px;
     overflow: hidden;
-    width: 90%;
     justify-content: center;
     align-items: center;
     background-color: var(--secColor);
-    padding: 0px 00px;
+    padding: 0px 20px;
     box-sizing: border-box;
     transition: all .4s ease;
     gap: 20px;
