--- a/components/NavBar/_NavBar.css
+++ b/components/NavBar/_NavBar.css
@@ -135,23 +135,16 @@
         .desktop-nav-CTA-buttons{
             width: auto;
             margin-left: auto;
-            margin-right: 20px;
             display: flex;
-            gap: 20px;
+            gap: 10px;
             align-items: center;
         }
 
         .isActive{
-            color: var(--textMainColor);
-            border: none;
-            background: none;
             font-size: 36px;
-            margin-left: 20px;
-
+            margin: 0px 30px;
         }
         
-       
-
 
         /* ------------------ Desktop Side Bar ------------------*/
 
@@ -200,7 +193,7 @@
             align-items: flex-end;
             width: 100%;
             height: 100%;
-            margin: 20px 20px 0px -10px;
+            margin: 20px 20px 0px -20px;
         }
         .sideBar-body span i{
             font-size: 20px;
